<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context=".views.farmerdetail.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/farmerDetailSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:background="@color/light_black">

            <TextView
                android:id="@+id/farmerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="@dimen/sixteen_dp"
                android:text="@string/farmer_information"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sixteen_sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/switchIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:contentDescription="@string/visibility_switch"
                android:src="@drawable/down_switch" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/farmerDetailLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/full_name">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/fullNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_medium"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/phone">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phoneField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_medium"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stateLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/state">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/stateField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_medium"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lgaLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/lga">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/lgaField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_medium"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/photo"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:autofillHints="Tap to add image"
                android:src="@drawable/person_placeholder_transparent" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/farmDetailSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:background="@color/light_black">

            <TextView
                android:id="@+id/farmLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="@dimen/sixteen_dp"
                android:text="@string/farm_information"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sixteen_sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/switchIndicator2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:contentDescription="@string/visibility_switch"
                android:src="@drawable/down_switch" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/farmDetailLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/farmNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/farm_name">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/farmNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_medium"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/farmLocationLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/farm_location">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/farmLocationField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_medium"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coordinateLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/farm_coordinates">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/coordinateField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_medium"
                    android:focusableInTouchMode="true"
                    android:focusable="false"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/mapLayout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="500dp" />
            </FrameLayout>


        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:layout_margin="@dimen/default_margin"
            android:layout_gravity="center|bottom"
            android:text="@string/save"
            android:textSize="20sp"
            android:fontFamily="@font/raleway_semibold"
            android:backgroundTint="@color/colorPrimary" />
    </LinearLayout>
</ScrollView>