<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.farmer.DashboardFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:padding="@dimen/default_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/farmerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/total_farmers"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalFarmers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/farmerLabel"
            android:layout_alignStart="@id/farmerLabel"
            android:layout_alignEnd="@id/farmerLabel"
            android:fontFamily="@font/raleway_semibold"
            android:text="0"
            android:textAlignment="center"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/farmLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/total_farms"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalFarms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/farmLabel"
            android:layout_alignStart="@id/farmLabel"
            android:layout_alignEnd="@id/farmLabel"
            android:fontFamily="@font/raleway_semibold"
            android:text="0"
            android:textAlignment="center"
            android:textSize="20sp" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/horizontal_line" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin"
            android:clipToPadding="true"
            tools:itemCount="4"
            tools:listitem="@layout/farmer_item_layout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/add_farmer"
            android:src="@android:drawable/ic_input_add" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
